# modular-wall

./: .gitignore  AI_WORKSPACE--modular-wall--assets--IMAGE-GENERATION-REFERENCE.md  AI_WORKSPACE--modular-wall--assets--mosaic-product-brochure.md  AI_WORKSPACE--modular-wall--docs--BRAND-BIBLE.md  AI_WORKSPACE--modular-wall--docs--BRAND.md  AI_WORKSPACE--modular-wall--docs--CEO-STATUS-REPORT-2026-04-06.md  AI_WORKSPACE--modular-wall--docs--COMPONENT-DIMENSIONS.md  AI_WORKSPACE--modular-wall--docs--INTERFACE-DESIGN-THREEJS.md  AI_WORKSPACE--modular-wall--docs--TASKS.md  AI_WORKSPACE--modular-wall--docs--architecture--WALL-CONTROLLER-API.md  AI_WORKSPACE--modular-wall--docs--concepts--HUB-TIERS-AND-MARKETPLACE.md  AI_WORKSPACE--modular-wall--docs--concepts--RING-CONTROLLER.md  AI_WORKSPACE--modular-wall--docs--concepts--STANDALONE-DESK-MODULES.md  AI_WORKSPACE--modular-wall--docs--sessions--CEO-KICKOFF-2026-04-06.md  CLAUDE.md  HANDOFF-BRIEFING.md  README.md  SESSION-SNAPSHOT.md  entities.json  mempalace.yaml  package.json  quick-start.sh
.claude/: SOUL.md
.planning/: .continue-here.md  ANIMAL-ANIMATION-HANDOFF.md  HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  WIREFRAME-MESH-HANDOFF.md  config.json
software/wall-controller/: .env.example  .gitignore  README.md  pyproject.toml
software/wall-controller/app/: main.py
software/wall-controller/app/core/: config.py
software/wall-controller/app/models/: module.py  scene.py
software/wall-controller/app/routers/: health.py  modules.py  scenes.py
software/wall-controller/tests/: test_health.py
(+576 files in other folders)
